ecmascript/parser/tests/test262-error-references/fail/d5bc0fb6d6e472cb.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/d5bc0fb6d6e472cb.js:1:19
  |
1 | function*g(){ var yield; }
  |                   ^^^^^

